# portfolio-homepage

./: README.md  pyproject.toml
.github/workflows/: generate-uv-lock.yml
src/portfolio_homepage/: crew.py  main.py
src/portfolio_homepage/config/: agents.yaml  tasks.yaml
